package ba.unsa.etf.rpr.t5;

import java.util.ArrayList;

public class PlanStudija {
    public Integer ciklus;
    public ArrayList<Predmet> spisakDozvoljenihIzbornihPredmeta;
    public ArrayList<Predmet> spisakObaveznihPredmeta;
}
