package ba.unsa.etf.rpr.t5;

import java.util.ArrayList;

public class Semestar {
    public Integer redniBrojSemestra;
    public Integer dozvoljeniBrojIzbornih;
    public ArrayList<Predmet> spisakUpisanihObaveznihPredmeta;
    public ArrayList<Predmet> spisakUpisanihIzbornihPredmeta;

    public Semestar(){

    };
    public void setSemestar(Integer redniBroj, Integer dozvoljeniBrojIzbornih){

    }
    public void dodajIzborni(Predmet p){

    }
    public void dodajObazvezni(Predmet p){

    }
    public boolean jeLiDobarIzborPredmeta(Student s, Predmet p){
    return true;
    }
}
