@startuml

class Student{
    - String ime
    - String prezime
    -brojIndeksa: Integer
    -planStudija: PlanStudija
    -trenutniSemestar: Semestar
    ..getter..
    +getPrezime()
    + getIme()
    ..setter..
    +Student: setObavezniPredmet(Predmet) void
    ..construct..
    + Student()
    ..other..
    +izaberiIzbornePredmete(Predmet) void
    +upisiUSledeciSemestar(Integer) void

}
Student *--PlanStudija
Student*--Semestar
Semestar*--Predmet
Predmet*--Student

class PlanStudija{
    +ciklus: Integer
    +spisakDvozvoljenihIzbornihPredmeta: Predmet[]
    +spisakObaveznihPredmeta: Predmet[]
}
PlanStudija*--Semestar
class Semestar{
    +redniBrojSemestra: Integer
    +dozvoljeniBrojIzbornih: Integer
    +obavezniPredmeti: ArrayList<Predmet>
    +izborniPredmeti: ArrayList<Predmet>
    ..construct..
    +Semestar()
    ..setter..
    setSemestar(Integer,Integer) void
    ..other..
    +dodajIzborni(Predmet) void
    +dodajObavezni(Predmet) void
    +jeLiDobarIzborni(Student, Predmet) boolean

}


class Predmet{
    -naziv: String
    -ECTSbodovi: int
    -spisakUpisaniNaPredmet: Student[]
    ..getter..
    +getNaziv(): String
    + getSpisakUpisanih() ArrayList<Student>
    ..other..
    + dodajStudentaNaSpisak(): void
    + skiniStudentaSaSpiska() void
}

@enduml